# LimiQuantix

./: .gitignore  Makefile  backend-plan.md  completed_workflow.md  cursor_project_plan_and_development_nex.md  package-lock.json  project-status-analysis.md  project_plan.md  text.txt  workflow_state.md
Quantix-vDC/: Makefile  README.md
agent/: Cargo.toml  README.md  build_log.txt
agent/limiquantix-common/: Cargo.toml
agent/limiquantix-common/src/: lib.rs  logging.rs
agent/limiquantix-guest-agent/: Cargo.toml  README.md
agent/limiquantix-guest-agent/packaging/: build-packages.sh
agent/limiquantix-guest-agent/packaging/cloud-init/: install-agent.yaml
agent/limiquantix-guest-agent/packaging/config/: agent.yaml
agent/limiquantix-guest-agent/packaging/debian/: changelog  control  postinst  prerm  rules
agent/limiquantix-guest-agent/packaging/iso/: README.txt  install.sh
agent/limiquantix-guest-agent/packaging/rpm/: limiquantix-guest-agent.spec  quantix-kvm-agent.spec
agent/limiquantix-guest-agent/packaging/systemd/: limiquantix-agent.service  quantix-kvm-agent.service
agent/limiquantix-guest-agent/packaging/windows/: build-msi.ps1
agent/limiquantix-guest-agent/packaging/windows/inno/: setup.iss
agent/limiquantix-guest-agent/packaging/windows/wix/: config.yaml.template  main.wxs
agent/limiquantix-guest-agent/src/: config.rs  error.rs  main.rs  protocol.rs  security.rs  telemetry.rs  transport.rs  vsock.rs
agent/limiquantix-guest-agent/src/handlers/: clipboard.rs  directory.rs  display.rs  execute.rs  file.rs  inventory.rs  lifecycle.rs  mod.rs  process.rs  quiesce.rs  service.rs  timesync.rs  update.rs
agent/limiquantix-guest-agent/tests/: integration_test.rs
agent/limiquantix-hypervisor/: Cargo.toml
agent/limiquantix-hypervisor/src/: cloudinit.rs  error.rs  guest_os.rs  lib.rs  mock.rs  storage.rs  traits.rs  types.rs  xml.rs
agent/limiquantix-hypervisor/src/libvirt/: backend.rs  mod.rs
agent/limiquantix-hypervisor/src/network/: mod.rs  ovs.rs  types.rs
agent/limiquantix-hypervisor/src/storage/: ceph.rs  iscsi.rs  local.rs  mod.rs  nfs.rs  traits.rs  types.rs
agent/limiquantix-node/: Cargo.toml
agent/limiquantix-node/src/: agent_client.rs  chassis.rs  cli.rs  config.rs  event_store.rs  frr.rs  health_check.rs  http_server.rs  iso_manager.rs  main.rs  registration.rs  server.rs  service.rs  state_watcher.rs  tls.rs  wireguard.rs
agent/limiquantix-node/src/update/: ab_update.rs  applier.rs  config.rs  downloader.rs  manifest.rs  mod.rs  status.rs
agent/limiquantix-proto/: Cargo.toml  build.rs
agent/limiquantix-proto/proto/: agent.proto  node_daemon.proto
agent/limiquantix-proto/src/: lib.rs
agent/limiquantix-telemetry/: Cargo.toml
agent/limiquantix-telemetry/src/: cpu.rs  disk.rs  lib.rs  memory.rs  network.rs  system.rs
agents/: agent_roles.md
backend/: Dockerfile  Makefile  coverage.html  coverage.out  docker-compose.yaml  go.mod  go.sum
docs/: 000006-proto-and-build-system-guide.md  000007-dashboard-ui-guide.md  000010-vm-detail-page.md  000011-hosts-list-page.md  000016-phase3-clusters-page.md  000017-phase3-networks-page.md  000018-phase3-security-groups-page.md  000020-phase4-monitoring-page.md  000021-phase4-alerts-page.md  000022-phase4-drs-page.md  000024-backend-implementation-guide.md  000025-project-status-analysis.md  000030-future-roadmap.md  000031-node-daemon-implementation-plan.md  000032-vmservice-node-daemon-integration.md  000033-node-registration-flow.md  000034-next-steps-comprehensive-plan.md  000035-phase2-real-hypervisor-progress.md  000036-linux-testing-guide.md  000037-node-installation-requirements.md  000038-real-vm-implementation.md  000041-console-development-roadmap.md  000042-console-access-implementation.md  000043-qvmrc-native-client.md  000044-guest-agent-architecture.md  000045-guest-agent-integration-complete.md  000045-image-library-implementation.md  000046-storage-backend-implementation.md  000048-network-backend-ovn-ovs.md  000051-quantix-vdc-appliance.md  000053-quantix-vdc-post-install-troubleshooting.md  000056-local-network-testing-guide.md  000057-makefile-build-system.md  000084-unified-iso-management.md  000085-vm-creation-fixes-jan-2026.md  000086-guest-agent-enhancements.md  000087-qvmc-improvement-plan.md  000088-guest-agent-complete-reference.md  000089-guest-agent-communication-debugging.md  000090-agent-installation-guide.md  (+2 more)
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
limiquantix-os/: Makefile  build.sh
proto/: buf.gen.yaml  buf.yaml
quantix-host-ui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
quantix-os/: .gitignore  Makefile  README.md  TESTING.md  build.bat  build.ps1  build.sh
quantix-os/console/: Cargo.toml
quantix-os/console-gui/: Cargo.toml
quantix-os/console-gui/src/: auth.rs  config.rs  main.rs  network.rs  ssh.rs  system_info.rs
quantix-os/console-gui/src/framebuffer/: app.rs  fb.rs  input.rs  mod.rs  ui.rs
quantix-os/console-gui/ui/: main.slint
quantix-os/console-tui/: Cargo.toml
quantix-os/console-tui/src/: auth.rs  config.rs  main.rs
quantix-os/console/src/: config.rs  logs.rs  main.rs  network.rs  system.rs
qvmc/: README.md  check_braces.py  index.html  package-lock.json  package.json
qvmc/src-tauri/: Cargo.toml  installer.nsh  tauri.conf.json
qvmc/src-tauri/src/: api.rs  config.rs  iso_server.rs  main.rs
qvmc/src-tauri/src/filetransfer/: download.rs  mod.rs  progress.rs  upload.rs
qvmc/src-tauri/src/usb/: mod.rs
qvmc/src-tauri/src/vnc/: encodings.rs  keysym.rs  mod.rs  rfb.rs
qvmrc/: README.md  index.html  package-lock.json  package.json  vite.config.ts
qvmrc/src-tauri/: Cargo.toml  installer.nsh  tauri.conf.json
qvmrc/src-tauri/icons/: icon.icns
qvmrc/src-tauri/src/: api.rs  config.rs  main.rs
qvmrc/src-tauri/src/filetransfer/: download.rs  mod.rs  upload.rs
qvmrc/src-tauri/src/usb/: mod.rs
qvmrc/src-tauri/src/vnc/: encodings.rs  keysym.rs  mod.rs  rfb.rs
scripts/: build-agent-iso.sh  build-node-daemon.sh  debug-cloudinit.sh  (+13 more)
(+798 files in other folders)
