[package]
name = "limiquantix-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Common utilities for Quantix-KVM agents including logging"

[dependencies]
# Logging
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["json", "env-filter", "fmt", "chrono"] }

# Error handling
anyhow.workspace = true

# Time formatting
chrono = { version = "0.4", features = ["clock"] }
