# =============================================================================
# limiquantix Guest Agent
# =============================================================================
# Lightweight agent binary that runs inside guest VMs to enable deep integration
# with the hypervisor host via virtio-serial communication.

[package]
name = "limiquantix-guest-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Guest VM agent for LimiQuantix virtualization platform"
readme = "README.md"

[[bin]]
name = "limiquantix-agent"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["full", "fs", "process", "signal"] }
tokio-stream.workspace = true

# Protobuf
prost.workspace = true
prost-types.workspace = true

# Logging and tracing
tracing.workspace = true
tracing-subscriber.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
hostname.workspace = true

# System information
sysinfo = "0.32"

# Byte handling
bytes = "1.5"

# Internal crates
limiquantix-proto = { path = "../limiquantix-proto" }

# Platform-specific dependencies
[target.'cfg(unix)'.dependencies]
nix = { version = "0.28", features = ["fs", "net", "user"] }
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_Security",
    "Win32_System_Services",
] }

[dev-dependencies]
tempfile = "3.10"
