# =============================================================================
# Quantix KVM Guest Agent
# =============================================================================
# Lightweight agent binary that runs inside guest VMs to enable deep integration
# with the hypervisor host via virtio-serial communication.
# Similar to VMware Tools, provides telemetry, remote execution, and more.

[package]
name = "limiquantix-guest-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Quantix KVM Guest Agent - VMware Tools alternative for KVM/QEMU"
readme = "README.md"

[[bin]]
name = "quantix-kvm-agent"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["full", "fs", "process", "signal"] }
tokio-stream.workspace = true

# Protobuf
prost.workspace = true
prost-types.workspace = true

# Logging and tracing
tracing.workspace = true
tracing-subscriber.workspace = true

# Serialization
serde.workspace = true
serde_json = "1.0"

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
hostname.workspace = true

# System information
sysinfo = "0.32"

# Byte handling
bytes = "1.5"

# Lazy initialization
once_cell = "1.19"

# Configuration
serde_yaml = "0.9"

# File logging with rotation
tracing-appender = "0.2"

# Clipboard (cross-platform)
arboard = "3.4"

# SHA256 for update verification
sha2 = "0.10"

# Internal crates
limiquantix-proto = { path = "../limiquantix-proto" }

# Platform-specific dependencies
[target.'cfg(unix)'.dependencies]
nix = { version = "0.28", features = ["fs", "net", "user"] }
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
# VSOCK support for high-bandwidth communication
tokio-vsock = { version = "0.5", optional = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_Security",
    "Win32_System_Services",
    "Win32_System_SystemInformation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(unix)'.dependencies.procfs]
version = "0.16"
optional = true

[features]
default = []
process_info = ["procfs"]
vsock = ["tokio-vsock"]

[dev-dependencies]
tempfile = "3.10"
