[package]
name = "limiquantix-node"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
# Enable libvirt backend (requires system libvirt)
libvirt = ["limiquantix-hypervisor/libvirt"]

[[bin]]
name = "limiquantix-node"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio.workspace = true
tokio-stream.workspace = true

# gRPC
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
hostname.workspace = true

# Configuration
config.workspace = true

# CLI
clap.workspace = true

# Async utilities
async-trait.workspace = true
futures.workspace = true

# HTTP client for control plane communication
# Use rustls-tls-native-roots to avoid aws-lc-rs build issues on Windows
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }
local-ip-address = "0.6"

# Random number generation
rand = "0.8"

# Hashing
md5 = "0.7"
sha2 = "0.10"
hex = "0.4"

# URL encoding
urlencoding = "2.1"

# HTTP server for Web UI (REST API + static files)
axum.workspace = true
axum-server.workspace = true
tower.workspace = true
tower-http.workspace = true
mime_guess.workspace = true
num_cpus = "1.16"

# TLS and certificate management
rustls.workspace = true
rustls-pemfile.workspace = true
tokio-rustls.workspace = true
rcgen.workspace = true
pem.workspace = true
# instant-acme.workspace = true  # Disabled - ACME is placeholder, aws-lc-sys has complex build requirements
base64.workspace = true
base64ct = "1.6"  # Pin to 1.6.x to avoid edition2024 requirement
time.workspace = true

# System information
sysinfo = "0.32"
gethostname = "0.4"
libc = "0.2"

# Internal crates
limiquantix-hypervisor.workspace = true
limiquantix-telemetry.workspace = true
limiquantix-proto.workspace = true
limiquantix-common.workspace = true

