[package]
name = "qx-console-gui"
version = "1.0.0"
edition = "2021"
authors = ["Quantix Team <team@quantix.io>"]
description = "Quantix-OS Graphical Console (DCUI) - Framebuffer GUI"
license = "Apache-2.0"
build = "build.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "s"

[features]
default = ["desktop"]
# Desktop mode - for testing on Linux/Windows/macOS with X11/Wayland
desktop = ["slint/backend-winit", "slint/renderer-femtovg"]
# Production mode - direct framebuffer rendering on Quantix-OS (no display server)
# Includes both femtovg (GPU) and software renderer for systems without GPU
linuxkms = ["slint/backend-linuxkms", "slint/renderer-femtovg", "slint/renderer-software"]
# Raw framebuffer fallback - renders directly to /dev/fb0 without DRM/KMS
# Used when Slint's LinuxKMS backend fails (e.g., VGA-only VMs, broken DRM)
framebuffer = ["dep:libc", "embedded-graphics", "evdev"]

[dependencies]
# Slint UI framework
# Backend is selected via features above
slint = { version = "1.9", default-features = false, features = ["compat-1-2"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "process", "fs"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

# System info
sysinfo = "0.31"
nix = { version = "0.29", features = ["net", "hostname", "user"] }

# Security - password hashing
argon2 = "0.5"
rand = "0.8"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
humansize = "2"

# Raw framebuffer rendering (optional - for fallback mode)
libc = { version = "0.2", optional = true }
embedded-graphics = { version = "0.8", optional = true }
evdev = { version = "0.12", optional = true }

[build-dependencies]
slint-build = "1.9"

[[bin]]
name = "qx-console-gui"
path = "src/main.rs"
