[package]
name = "qx-console-gui"
version = "0.1.0"
edition = "2021"
authors = ["Quantix-KVM Team"]
description = "Quantix-OS Console GUI (DCUI) - Local management interface"
license = "Apache-2.0"

[features]
default = ["desktop"]
# Desktop development mode - uses winit for windowed rendering
desktop = ["slint/backend-winit", "slint/renderer-femtovg"]
# Production mode - direct framebuffer via LinuxKMS
# Uses femtovg (pure Rust) instead of Skia for musl compatibility
linuxkms = ["slint/backend-linuxkms", "slint/renderer-femtovg"]

[dependencies]
# UI Framework
slint = "1.9"

# Async runtime
tokio = { version = "1", features = ["full", "rt-multi-thread"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# Password hashing (Argon2id - memory-hard, GPU-resistant)
argon2 = "0.5"

# System information
sysinfo = "0.32"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Random for salt generation
rand = "0.8"

# Error handling
thiserror = "1"
anyhow = "1"

# Network interface detection
nix = { version = "0.29", features = ["net", "fs"] }

[build-dependencies]
slint-build = "1.9"

[[bin]]
name = "qx-console-gui"
path = "src/main.rs"
