[package]
name = "qx-console"
version = "1.0.0"
edition = "2021"
authors = ["Quantix Team <team@quantix.io>"]
description = "Quantix-OS Console TUI (DCUI)"
license = "Apache-2.0"

# Static linking for Alpine musl
[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"  # Optimize for size

[dependencies]
# TUI framework
ratatui = "0.29"
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "process", "fs", "io-util"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

# System info
sysinfo = "0.31"
nix = { version = "0.29", features = ["net", "hostname"] }

# Utilities
chrono = "0.4"
humansize = "2"

[[bin]]
name = "qx-console"
path = "src/main.rs"
