[package]
name = "qvmrc"
version = "0.1.0"
description = "Quantix Virtual Machine Remote Console"
authors = ["LimiQuantix Team"]
license = "Apache-2.0"
repository = "https://github.com/Galev01/LimiQuantix"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
# Tauri framework
tauri = { version = "1", features = ["shell-open", "window-all", "clipboard-all", "dialog-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# VNC/RFB protocol
# We implement our own lightweight client

# Networking
tokio-tungstenite = "0.21"

# Compression (for VNC encodings)
flate2 = "1"

# Image processing (for framebuffer)
image = "0.24"

# USB access (optional, for USB passthrough)
# rusb = { version = "0.9", optional = true }

# Clipboard
arboard = "3"

# HTTP client (for Control Plane API)
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# UUID generation
uuid = { version = "1", features = ["v4"] }

# DES encryption (for VNC authentication)
des = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Configuration
directories = "5"
toml = "0.8"

[features]
default = ["vnc", "custom-protocol"]
vnc = []
spice = []  # Future: SPICE protocol support
usb = []    # Future: USB passthrough
custom-protocol = ["tauri/custom-protocol"]

# Optimizations for release builds
[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
strip = true
panic = "abort"
